[gd_scene load_steps=9 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://country-font.tres" type="DynamicFont" id=2]
[ext_resource path="res://country-label.gd" type="Script" id=3]
[ext_resource path="res://main-2d-camera.gd" type="Script" id=4]
[ext_resource path="res://quest-handler.gd" type="Script" id=5]
[ext_resource path="res://deck-handler.gd" type="Script" id=6]
[ext_resource path="res://country-subtitle-font.tres" type="DynamicFont" id=7]
[ext_resource path="res://state-machine.gd" type="Script" id=8]

[node name="Map" type="Node2D"]
script = ExtResource( 8 )

[node name="USA" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 82, 94 )
cell_half_offset = 1
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( -458747, 0, 0, -458746, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 6, 0, -327674, 6, 0, -327673, 6, 0, -327672, 6, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 6, 0, -262139, 6, 0, -262138, 6, 0, -262137, 6, 0, -262136, 6, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, -1200553578, -196606, 0, 0, -196605, 0, 0, -196604, 6, 0, -196603, 6, 0, -196602, 6, 0, -196601, 6, 0, -196600, 1, 0, -196599, 0, 0, -196598, 1, 0, -196597, 1, 0, -196596, 0, 0, -196595, 0, -1200553578, -196594, 0, -1200553578, -131071, 9, 0, -131070, 0, 0, -131069, 0, 0, -131068, 2, 0, -131067, 2, 0, -131066, 0, 0, -131065, 21, 0, -131064, 19, 0, -131063, 0, 0, -131062, 0, 0, -131061, 16, -1200553578, -131060, 0, -1200553578, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, -1200553578, -65534, 0, 0, -65533, 1, 0, -65532, 0, 0, -65531, 0, 0, -65530, 20, 0, -65529, 19, 0, -65528, 2, 0, -65527, 0, 0, -65526, 14, 0, -65525, 0, -1200553578, -65524, 0, 0, -65523, 0, 0, -65522, 23, 0, -65521, 0, 0, -65520, 0, -1200553578, -65519, 0, -1200553578, 3, 1, 0, 4, 2, 0, 5, 0, 0, 6, 1, 0, 7, 1, -1200553578, 8, 0, -1200553578, 9, 10, -1200553578, 10, 12, -1200553578, 11, 0, -1200553578, 12, 0, 0, 13, 8, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 65538, 0, -1200553578, 65539, 0, 0, 65540, 2, 0, 65541, 0, 0, 65542, 1, 0, 65543, 15, -1200553578, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 25, 0, 65550, 8, 0, 65551, 0, 0, 65552, 21, 0, 65553, 0, 0, 131074, 0, -1200553578, 131075, 1, 0, 131076, 0, 0, 131077, 1, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 5, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 196610, 0, -1200553578, 196611, 0, 0, 196612, 0, 0, 196613, 23, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 5, 0, 196618, 5, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 23, 0, 196624, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 8, 0, 262153, 5, 0, 262154, 5, 0, 262155, 0, 0, 262156, 0, 0, 262157, 21, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0 )

[node name="Name" type="Label" parent="USA"]
margin_right = 40.0
margin_bottom = 14.0
mouse_filter = 0
custom_fonts/font = ExtResource( 2 )
text = "USA"
script = ExtResource( 3 )

[node name="Reputation" type="Label" parent="USA/Name"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 7 )
text = "Reputation:"

[node name="Insecurity" type="Label" parent="USA/Name"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 36.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 7 )
text = "Food Insecurity: "

[node name="CANADA" type="TileMap" parent="."]
position = Vector2( 589, -928 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 82, 94 )
cell_half_offset = 1
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( -458747, 0, 0, -458746, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 6, 0, -327674, 6, 0, -327673, 6, 0, -327672, 6, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 6, 0, -262139, 6, 0, -262138, 6, 0, -262137, 6, 0, -262136, 6, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, -1200553578, -196606, 0, 0, -196605, 0, 0, -196604, 6, 0, -196603, 6, 0, -196602, 6, 0, -196601, 6, 0, -196600, 1, 0, -196599, 0, 0, -196598, 1, 0, -196597, 1, 0, -196596, 0, 0, -196595, 0, -1200553578, -196594, 0, -1200553578, -131071, 9, 0, -131070, 0, 0, -131069, 0, 0, -131068, 2, 0, -131067, 2, 0, -131066, 0, 0, -131065, 21, 0, -131064, 19, 0, -131063, 0, 0, -131062, 0, 0, -131061, 16, -1200553578, -131060, 0, -1200553578, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, -1200553578, -65534, 0, 0, -65533, 1, 0, -65532, 0, 0, -65531, 0, 0, -65530, 20, 0, -65529, 19, 0, -65528, 2, 0, -65527, 0, 0, -65526, 14, 0, -65525, 0, -1200553578, -65524, 0, 0, -65523, 0, 0, -65522, 23, 0, -65521, 0, 0, -65520, 0, -1200553578, -65519, 0, -1200553578, 3, 1, 0, 4, 2, 0, 5, 0, 0, 6, 1, 0, 7, 1, -1200553578, 8, 0, -1200553578, 9, 10, -1200553578, 10, 12, -1200553578, 11, 0, -1200553578, 12, 0, 0, 13, 8, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 65538, 0, -1200553578, 65539, 0, 0, 65540, 2, 0, 65541, 0, 0, 65542, 1, 0, 65543, 15, -1200553578, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 25, 0, 65550, 8, 0, 65551, 0, 0, 65552, 21, 0, 65553, 0, 0, 131074, 0, -1200553578, 131075, 1, 0, 131076, 0, 0, 131077, 1, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 5, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 196610, 0, -1200553578, 196611, 0, 0, 196612, 0, 0, 196613, 23, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 5, 0, 196618, 5, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 23, 0, 196624, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 8, 0, 262153, 5, 0, 262154, 5, 0, 262155, 0, 0, 262156, 0, 0, 262157, 21, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0 )

[node name="Name" type="Label" parent="CANADA"]
margin_right = 766.0
margin_bottom = 106.0
mouse_filter = 0
custom_fonts/font = ExtResource( 2 )
text = "CANADA"
script = ExtResource( 3 )

[node name="Reputation" type="Label" parent="CANADA/Name"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 7 )
text = "Reputation:"

[node name="Insecurity" type="Label" parent="CANADA/Name"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 36.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 7 )
text = "Food Insecurity: "

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2( 1019, -961 )
offset = Vector2( 0, 500 )
current = true
zoom = Vector2( 4, 4 )
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="QuestPanel" type="Panel" parent="CanvasLayer"]
margin_left = 350.0
margin_top = 176.0
margin_right = 637.0
margin_bottom = 392.0
script = ExtResource( 5 )

[node name="CardName" type="Label" parent="CanvasLayer/QuestPanel"]
anchor_right = 1.0
text = "Card Name"
align = 1

[node name="QuestTitle" type="Label" parent="CanvasLayer/QuestPanel"]
margin_left = 9.0
margin_top = 37.0
margin_right = 76.0
margin_bottom = 51.0
text = "QuestTitle"

[node name="QuestDescription" type="Label" parent="CanvasLayer/QuestPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 65.0
margin_right = -10.0
margin_bottom = -50.0
text = "QuestDescription"
autowrap = true

[node name="Result" type="Label" parent="CanvasLayer/QuestPanel"]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="StartButton" type="Button" parent="CanvasLayer/QuestPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 151.0
margin_top = 181.0
text = "Start quest"

[node name="CloseButton" type="Button" parent="CanvasLayer/QuestPanel"]
anchor_bottom = 1.0
margin_top = 181.0
margin_right = 148.0
text = "Continue"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/QuestPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 25.0

[node name="Timer" type="Timer" parent="CanvasLayer/QuestPanel"]
one_shot = true

[node name="DeckPanel" type="Panel" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.509804 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0

[node name="DeckHolder" type="GridContainer" parent="CanvasLayer/DeckPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 3
script = ExtResource( 6 )
